fix footer image not showing bug in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 200px;
-    background: url('/assets/images/popcorn.png');
+    background: url('../images/popcorn.png');
     z-index: -1;
 }
 
